# millet-record

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: mac.yml  python-ci.yml  release.yml
mac/: Package.swift  README.md
mac/Sources/MeetRecordMac/: CLI.swift  Devices.swift  MicCapture.swift  MicGain.swift  Mixer.swift  Permissions.swift  ProcessTap.swift  SoftClip.swift  StopController.swift  SyntheticSilence.swift  WavWriter.swift  main.swift
mac/Tests/MeetRecordMacTests/: CLITests.swift  MicGainTests.swift  MixerTests.swift  SoftClipTests.swift  StopControllerTests.swift  WavWriterTests.swift
meet_record/: __init__.py  audio.py  capture.py  cli.py  utils.py
meet_record/_bin/: .gitignore
millet_record/: __init__.py  capture.py  cli.py  languages.py
tests/: conftest.py  test_capture_darwin.py  test_capture_linux.py  test_imports.py
