[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetscribe-record"
dynamic = ["version"]
description = "Lightweight capture-only subset of meetscribe: record dual-channel meeting audio (mic + system) with no transcription/diarization/summarization deps."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "pretyflaco"}]
keywords = [
    "meeting",
    "recording",
    "audio",
    "ffmpeg",
    "pipewire",
    "pulseaudio",
    "core-audio",
    "scribe",
    "thin-client",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.20",
]

[project.scripts]
meet = "meet_record.cli:main"

[project.urls]
Homepage = "https://github.com/pretyflaco/meetscribe-record"
Repository = "https://github.com/pretyflaco/meetscribe-record"
Issues = "https://github.com/pretyflaco/meetscribe-record/issues"

[tool.setuptools.dynamic]
# Single source of truth lives at meet_record/__init__.py:__version__.
# Without this, bumping a release would require editing both files in
# lockstep — a maintenance hazard.
version = {attr = "meet_record.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["meet_record*"]

[tool.setuptools.package-data]
# Ship the macOS arm64 binary inside the wheel at
# meet_record/_bin/meet-record-mac. The directory is .gitignore'd
# (only the .gitignore itself is committed) so the binary lands in
# place at wheel-build time, copied from the mac.yml CI artifact by
# release.yml.
#
# The two-glob shape (`_bin/*` + `_bin/.*`) is necessary because
# setuptools.package-data uses fnmatch which excludes dotfiles from
# `*`. We need the dotfile so the directory is non-empty in the
# Linux wheel (where there's no binary to ship) and so the directory
# is created by `pip install` even when the tree is otherwise empty.
meet_record = ["_bin/*", "_bin/.*"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-timeout", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pytest-timeout: kills any test that runs longer than the given budget,
# preventing CI hangs from a stuck mock recorder. Per-test overrides via
# `@pytest.mark.timeout(N)` (seconds).
timeout = 60
addopts = "-ra --strict-markers"
