[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millet-record"
dynamic = ["version"]
description = "Lightweight capture-only subset of millet (formerly meetscribe-record): record dual-channel meeting audio (mic + system) with no transcription/diarization/summarization deps.  Named after the Ottoman millet system.  Part of the vezir ecosystem."
readme = "README.md"
# Upper bound: coincurve (pulled transitively via vezir[nostr]) has no
# cp314 wheel yet, so a 3.14 install falls back to a source build that
# fails. Cap at <3.14 so pip/pipx select 3.13 (or refuse with a clear
# message) instead. Relax once coincurve ships cp314 wheels.
requires-python = ">=3.10,<3.14"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "pretyflaco"}]
keywords = [
    "meeting",
    "recording",
    "audio",
    "ffmpeg",
    "pipewire",
    "pulseaudio",
    "core-audio",
    "scribe",
    "thin-client",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.20",
]

[project.scripts]
millet = "millet_record.cli:main"
# Deprecation-alias console script.  Prints a one-time warning, then
# forwards to the `millet` group.  Removed in millet-record 0.6.0.
meet = "millet_record.cli:_deprecated_meet_main"

[project.urls]
Homepage = "https://github.com/pretyflaco/millet-record"
Repository = "https://github.com/pretyflaco/millet-record"
Issues = "https://github.com/pretyflaco/millet-record/issues"

[tool.setuptools.dynamic]
# Single source of truth lives at millet_record/__init__.py:__version__.
# Without this, bumping a release would require editing both files in
# lockstep — a maintenance hazard.
version = {attr = "millet_record.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["millet_record*"]

[tool.setuptools.package-data]
# Ship the macOS arm64 binary inside the wheel at
# millet_record/_bin/meet-record-mac. The directory is .gitignore'd
# (only the .gitignore itself is committed) so the binary lands in
# place at wheel-build time, copied from the mac.yml CI artifact by
# release.yml.
#
# The two-glob shape (`_bin/*` + `_bin/.*`) is necessary because
# setuptools.package-data uses fnmatch which excludes dotfiles from
# `*`.  We need the dotfile so the directory is non-empty in the
# Linux wheel (where there's no binary to ship) and so the directory
# is created by `pip install` even when the tree is otherwise empty.
#
# Note: the binary file itself is still named `meet-record-mac` —
# renaming it would require macOS code-signing bundle-path changes
# that aren't worth doing as part of the rename.  Tracked as a
# follow-up.
millet_record = ["_bin/*", "_bin/.*"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-timeout", "build"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests favor readability over bugbear/ruff opinions.
"tests/*" = ["B", "RUF", "E501"]
# CLI defers the version import until after the click group is defined.
"millet_record/cli.py" = ["E402"]
# Native-script language names (Turkish dotless ı, Arabic) trip the
# "ambiguous Unicode" check; they are intentional and correct.
"millet_record/languages.py" = ["RUF001"]
# One long ffmpeg/pactl argv comment line.
"millet_record/capture.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pytest-timeout: kills any test that runs longer than the given budget,
# preventing CI hangs from a stuck mock recorder. Per-test overrides via
# `@pytest.mark.timeout(N)` (seconds).
timeout = 60
addopts = "-ra --strict-markers"
